# qt-solutions

./: .gitignore
qtpropertybrowser/: CMakeLists.txt  ClassDiagram.cd  conan_for_vs2022.bat  conanfile.txt
qtpropertybrowser/examples/canvas_typed/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  qtcanvas.cpp  qtcanvas.h
qtpropertybrowser/examples/canvas_variant/: mainwindow.cpp  qtcanvas.cpp
qtpropertybrowser/examples/object_controller/: main.cpp  objectcontroller.cpp
qtpropertybrowser/src/: qteditorfactory.cpp  qteditorfactory.h  qtpropertybrowserutils.cpp  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qtvariantproperty.cpp  qtvariantproperty.h
